--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "focus-flow": "^1.2.14",
     "pixi.js": "^6.0.4",
     "vue": "^3.0.0"
   },
