--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4"
   }
 }
