chore: 迁移到ts环境

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,39 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "declarationDir": "types",
-    "lib": [
-      "ES6",
-      "DOM"
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "types": [
+      "webpack-env"
     ],
-    "noUnusedLocals": true, // 若有未使用的局部变量则抛错。
-    "noUnusedParameters": true, // 	若有未使用的参数则抛错
-  }
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
