--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "pixi.js": "^6.0.4",
+    "vue": "3.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
